--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@apollo/client": "^3.5.8",
     "@mithraic-labs/psy-american": "^0.1.4",
+    "@nivo/bar": "0.79.1",
+    "@nivo/core": "0.79.0",
+    "@nivo/line": "0.79.1",
+    "@nivo/pie": "0.79.1",
     "@project-serum/anchor": "^0.20.1",
     "@solana/spl-token": "^0.1.8",
     "@solana/spl-token-registry": "^0.2.1726",
@@ -20,13 +24,17 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-grid-layout": "^1.3.0",
     "@types/react-router-dom": "^5.1.8",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
+    "coingecko-api": "1.0.10",
     "graphql": "^16.3.0",
     "moment": "^2.29.1",
+    "nivo": "0.31.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-grid-layout": "1.3.3",
     "react-scripts": "4.0.3",
     "string-length": "^5.0.1",
     "typescript": "^4.1.2",
