--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.8",
+    "@craco/craco": "^6.4.3",
     "@mithraic-labs/psy-american": "^0.1.4",
     "@nivo/bar": "0.79.1",
     "@nivo/core": "0.79.0",
@@ -26,22 +27,25 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-grid-layout": "^1.3.0",
     "@types/react-router-dom": "^5.1.8",
+    "autoprefixer": "^9",
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
     "coingecko-api": "1.0.10",
     "graphql": "^16.3.0",
     "moment": "^2.29.1",
     "nivo": "0.31.0",
+    "postcss": "^7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "1.3.3",
     "react-scripts": "4.0.3",
     "string-length": "^5.0.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -63,5 +67,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
