--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bn.js": "^5.2.0",
     "borsh": "^0.6.0",
     "coingecko-api": "1.0.10",
+    "daisyui": "^1.25.4",
     "graphql": "^16.3.0",
     "moment": "^2.29.1",
     "nivo": "0.31.0",
