--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
   },
   "scripts": {
     "start": "craco start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "craco build"
   },
   "eslintConfig": {
     "extends": [
