--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@craco/craco": "^6.4.3",
     "@mithraic-labs/psy-american": "^0.1.4",
     "@nivo/bar": "0.79.1",
+    "@nivo/calendar": "^0.79.1",
     "@nivo/core": "0.79.0",
     "@nivo/line": "0.79.1",
     "@nivo/pie": "0.79.1",
